# python-project

./: .gitignore  Dockerfile  common.py  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
routers/: auth.py  devices.py
